--- a/ae/ae-01-meet-the-penguins.qmd
+++ b/ae/ae-01-meet-the-penguins.qmd
@@ -1,6 +1,11 @@
 ---
 title: "AE 01: Meet the penguins"
+categories: 
+  - Application exercise
 jupyter: python3
+execute: 
+  warning: false
+  error: false
 ---
 
 For this application exercise, we'll use the **pandas** and **seaborn** packages.
