--- a/ae/ae-05-majors-wrangling.qmd
+++ b/ae/ae-05-majors-wrangling.qmd
@@ -1,7 +1,9 @@
 ---
 title: "AE 05: Wrangling College Majors"
+categories: 
+  - Application exercise
 jupyter: python3
-execute:
+execute: 
   warning: false
   error: false
 ---
@@ -10,43 +12,7 @@ execute:
 
 Our ultimate goal in this application exercise is to make the following data visualization.
 
-```{python}
-#| echo: false
-
-import pandas as pd
-import matplotlib.pyplot as plt
-import seaborn as sns
-
-sns.set_style("whitegrid")
-
-degrees = pd.read_csv("data/degrees.csv")
-
-data = degrees.melt(id_vars='field', var_name='year', value_name='n')
-
-# Filter data for any three different fields and years 2005-2015
-data['year'] = pd.to_datetime(data['year'], format='%Y')
-selected_fields = data[(data['field'].isin(['Business', 'Engineering', 'Computer and information sciences', 'Psychology'])) & 
-                            (data['year'].dt.year >= 2005) & 
-                            (data['year'].dt.year <= 2015)]
-
-# Plotting
-custom_palette = {
-    "Business": "#53868B",
-    "Engineering": "#7AC5CD",
-    "Computer and information sciences": "#8B814C",
-    "Psychology": "#CDBE70"
-}
-
-plt.figure(figsize=(8, 6))
-sns.lineplot(data=selected_fields, x='year', y='n', hue='field', marker='o', palette=custom_palette)
-plt.title('Selected Majors over the years\nAcademic years 2005 - 2015')
-plt.xlabel('Graduation year')
-plt.ylabel('Number of majors graduating')
-plt.legend(title='Degree type')
-plt.grid(True)
-plt.show()
-
-```
+![](images/degrees_plot_final.png){fig-align="center"}
 
 ## Data
 
@@ -85,7 +51,7 @@ degrees.head()
 
 *Add your response here.*
 
--   **Demo:** Start over with pivoting, and this time also make sure `year` is a Datetime variable in the resulting data frame.
+-   **Demo:** Start over with pivoting, and this time also make sure `year` is a numerical variable in the resulting data frame.
 
 ```{python}
 #| label: pivot-with-transform
@@ -98,54 +64,29 @@ degrees.head()
 
 -   **Demo:** Add on to your pipeline that you started with pivoting and convert `NA`s in `n` to `0`s.
 
-```{r}
+```{python}
 #| label: convert-na
 
 # add your code here
 ```
 
--   **Demo:** In our plot the degree types are Business, Computer and information sciences, Engineering, and Psychology. This information is in our dataset, in the `degree` column, but this column also has additional characters we don't need. Filter the dataframe with levels Business, Computer and information sciences, Engineering, and Psychology based on `degree`. Do this by adding on to your pipeline from earlier.
+-   **Demo:** In our plot the degree types are BA, BS, MA, MS, and PhD. This information is in our dataset, in the `degree` column, but this column also has additional characters we don’t need. Create a new column called `degree_type` with levels BA, BS, MA, MS, and PhD (in this order) based on `degree`. Do this by adding on to your pipeline from earlier.
 
-```{r}
+```{python}
 #| label: degree-type
 
 # add your code here
 ```
 
--   **Your turn:** Now we start making our plot, but let's not get too fancy right away. Create the following plot, which will serve as the "first draft" on the way to our [Goal]. Do this by adding on to your pipeline from earlier.
+-   **Your turn:** Now we start making our plot, but let's not get too fancy right away.
+    Create the following plot, which will serve as the "first draft" on the way to our [Goal].
+    Do this by adding on to your pipeline from earlier.
+
+-   **Hint**: Make sure to state `ci=None` when using `sns.lineplot()`
+
+![](images/degrees_start.png){fig-align="center"}
 
 ```{python}
-#| echo: false
-import pandas as pd
-import matplotlib.pyplot as plt
-import seaborn as sns
-
-sns.set_style("darkgrid")
-
-degrees = pd.read_csv("data/degrees.csv")
-data = degrees.melt(id_vars='field', var_name='year', value_name='n')
-
-# Filter data for any three different fields and years 2005-2015
-data['year'] = pd.to_datetime(data['year'], format='%Y')
-selected_fields = data[(data['field'].isin(['Business', 'Engineering', 'Computer and information sciences', 'Psychology'])) & 
-                            (data['year'].dt.year >= 2005) & 
-                            (data['year'].dt.year <= 2015)]
-
-# Plotting
-custom_palette = {
-    "Business": "#53868B",
-    "Engineering": "#7AC5CD",
-    "Computer and information sciences": "#8B814C",
-    "Psychology": "#CDBE70"
-}
-
-plt.figure(figsize=(8, 6))
-sns.lineplot(data=selected_fields, x='year', y='n', hue='field', marker='o')
-plt.legend()
-plt.show()
-```
-
-```{r}
 #| label: plot-draft
 
 # add your code here
@@ -155,16 +96,27 @@ plt.show()
 
 *Add your response here.*
 
--   **Demo:** Update line colors using the following level / color assignments. Once again, do this by adding on to your pipeline from earlier.
-    -   Business: "#53868B"
+-   **Demo**: Update x-axis scale such that the years displayed go from 2019 to 2023 in unique years. Do this by adding on to your pipeline from earlier.
 
-    -   Engineering: "#7AC5CD"
+```{python}
 
-    -   Computer and information sciences: "#8B814C"
+# add your code here
+```
 
-    -   Psychology: "#CDBE70"
+-   **Demo:** Update line colors using the following level / color assignments.
+    Once again, do this by adding on to your pipeline from earlier.
 
-```{r}
+    -   BA: "#53868B"
+
+    -   BS: "#7AC5CD"
+
+    -   MA: "#89a285"
+
+    -   MS: "#8B814C"
+
+    -   PhD: "#CDBE70"
+
+```{python}
 #| label: plot-improve-1
 
 # add your code here
@@ -172,7 +124,7 @@ plt.show()
 
 -   **Your turn:** Update the plot labels (`title`, `x`, and `y`) and use `sns.set_style("white_grid")`. Once again, do this by adding on to your pipeline from earlier.
 
-```{r}
+```{python}
 #| label: plot-improve-2
 
 # add your code here
