--- a/ae/ae-14-effective-dataviz-A.qmd
+++ b/ae/ae-14-effective-dataviz-A.qmd
@@ -3,6 +3,10 @@ title: "Trends instructional staff employees in universities"
 categories: 
   - Application exercise
   - Answers
+jupyter: python3
+execute: 
+  warning: false
+  error: false
 ---
 
 The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals.
@@ -13,13 +17,13 @@ What trends are apparent in this visualization?
 
 ## Packages
 
-```{r}
+```{python}
 #| label: packages
 #| message: false
 
-library(tidyverse)
-library(scales)
-library(ggthemes)
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
 ```
 
 ## Data
@@ -27,11 +31,11 @@ library(ggthemes)
 Each row in this dataset represents a faculty type, and the columns are the years for which we have data.
 The values are percentage of hires of that type of faculty for each year.
 
-```{r}
+```{python}
 #| label: load-data-staff
 #| message: false
 
-staff <- read_csv("https://sta199-s24.github.io/data/instructional-staff.csv")
+staff = pd.read_csv("data/instructional-staff.csv")
 staff
 ```
 
@@ -39,126 +43,53 @@ staff
 
 -   **Your turn (10 minutes):** Recreate the visualization above. Try to match as many of the elements as possible. Hint: You might need to reshape your data first.
 
-```{r}
-staff_long <- staff |>
-  pivot_longer(
-    cols = -faculty_type, names_to = "year",
-    values_to = "percentage"
-  ) |>
-  mutate(
-    percentage = as.numeric(percentage),
-    faculty_type = fct_relevel(
-      faculty_type,
-      "Full-Time Tenured Faculty",
-      "Full-Time Tenure-Track Faculty",
-      "Full-Time Non-Tenure-Track Faculty",
-      "Part-Time Faculty",
-      "Graduate Student Employees"
-    )
-  )
+```{python}
+staff_long = staff.melt(id_vars=['faculty_type'], var_name='year', value_name='percentage')
+staff_long['percentage'] = pd.to_numeric(staff_long['percentage'])
+staff_long['year'] = pd.to_numeric(staff_long['year'])
+
+faculty_order = [
+    "Full-Time Tenured Faculty",
+    "Full-Time Tenure-Track Faculty",
+    "Full-Time Non-Tenure-Track Faculty",
+    "Part-Time Faculty",
+    "Graduate Student Employees"
+]
+staff_long['faculty_type'] = pd.Categorical(staff_long['faculty_type'], categories=faculty_order, ordered=True)
+staff_long['year'] = staff_long['year'].astype(str)
+
 ```
 
-```{r}
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-ggplot(
-  staff_long,
-  aes(
-    x = str_wrap(faculty_type, 20),
-    y = percentage,
-    fill = year
-    )
-  ) +
-  geom_col(position = "dodge") +
-  scale_y_continuous(breaks = seq(5, 45, 5), limits = c(0, 45)) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    fill = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  theme(
-    legend.position = c(0.4, 0.93),
-    legend.direction = "horizontal",
-    legend.key.size = unit(0.2, "cm"),
-    legend.key.height = unit(0.1, "cm"),
-    legend.text.align = 0,
-    legend.background = element_rect(color = "black", linewidth = 0.2),
-    legend.text = element_text(size = 7),
-    panel.grid.minor = element_blank(),
-    panel.grid.major.x = element_blank(),
-    plot.caption = element_text(size = 8, hjust = 0)
-  ) +
-  guides(fill = guide_legend(nrow = 1))
-```
 
-## Represent percentages as parts of a whole
+sns.set_theme(style="whitegrid")
 
--   **Demo:** Recreate the previous visualization where the percentages are represented as parts of a whole.
-
-```{r}
-#| fig-asp: 0.5
-#| fig-width: 12.0
-ggplot(
-  staff_long,
-  aes(
-    x = str_wrap(faculty_type, 20),
-    y = percentage,
-    fill = fct_rev(year)
-    )
-  ) +
-  geom_col(position = "fill", color = "white", linewidth = 0.2) +
-  scale_y_continuous(labels = label_percent()) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    fill = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  theme(
-    legend.text.align = 0,
-    legend.background = element_rect(color = "black", size = 0.2),
-    legend.text = element_text(size = 7),
-    panel.grid.minor = element_blank(),
-    panel.grid.major.x = element_blank(),
-    plot.caption = element_text(size = 8, hjust = 0)
-  )
+plt.figure(figsize=(10, 6))
+sns.barplot(data=staff_long, x='faculty_type', y='percentage', hue='year', dodge=True)
+plt.ylim(0, 45)
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.legend(title='Year', loc='upper left', bbox_to_anchor=(0.4, 0.93), ncol=5)
+plt.show()
 ```
 
 ## Place time on x-axis
 
 -   **Demo:** Convert the visualization to a line plot with time on the x-axis.
 
-```{r}
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-ggplot(
-  staff_long,
-  aes(
-    x = year,
-    y = percentage,
-    color = str_wrap(faculty_type, 20),
-    group = str_wrap(faculty_type, 20)
-    )
-  ) +
-  geom_line(linewidth = 1) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    color = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  scale_y_continuous(labels = label_percent(accuracy = 1, scale = 1)) +
-  theme(
-    legend.key.height = unit(1.5, "cm"),
-    plot.caption = element_text(size = 8, hjust = 0)
-  )
+plt.figure(figsize=(10, 6))
+sns.lineplot(data=staff_long, x='year', y='percentage', hue='faculty_type', marker='o')
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.legend(title='Faculty Type', loc='upper left', bbox_to_anchor=(1.05, 1), borderaxespad=0)
+plt.show()
 ```
 
 ## Pay attention to variable types
@@ -169,35 +100,18 @@ Time is represented as a character string (equally spaces between levels) instea
 
 -   **Your turn:** Implement the fix for the x-axis of the plot.
 
-```{r}
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-staff_long <- staff_long |>
-  mutate(year = as.numeric(year))
+staff_long['year'] = pd.to_numeric(staff_long['year'])  # Ensure year is treated as a numeric type
 
-ggplot(
-  staff_long,
-  aes(
-    x = year,
-    y = percentage,
-    color = str_wrap(faculty_type, 20),
-    group = str_wrap(faculty_type, 20)
-  )
-) +
-  geom_line(linewidth = 1) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    color = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  scale_y_continuous(labels = label_percent(accuracy = 1, scale = 1)) +
-  theme(
-    legend.key.height = unit(1.5, "cm"),
-    plot.caption = element_text(size = 8, hjust = 0)
-  )
+plt.figure(figsize=(10, 6))
+sns.lineplot(data=staff_long, x='year', y='percentage', hue='faculty_type', marker='o')
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.legend(title='Faculty Type', loc='upper left', bbox_to_anchor=(1.05, 1), borderaxespad=0)
+plt.show()
 ```
 
 ## Use an accessible color scale
@@ -209,193 +123,101 @@ What types of color vision deficiencies are there?
 
 -   **Demo:** Remake the plot with an accessible color scale.
 
-```{r}
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-ggplot(
-  staff_long,
-  aes(
-    x = year,
-    y = percentage,
-    color = str_wrap(faculty_type, 20),
-    group = str_wrap(faculty_type, 20)
-    )
-  ) +
-  geom_line(linewidth = 1) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    color = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  scale_y_continuous(labels = label_percent(accuracy = 1, scale = 1)) +
-  theme(
-    legend.key.height = unit(1.5, "cm"),
-    plot.caption = element_text(size = 8, hjust = 0)
-  ) +
-  scale_color_colorblind() # from ggthemes package
+plt.figure(figsize=(10, 6))
+sns.lineplot(data=staff_long, x='year', y='percentage', hue='faculty_type', marker='o', palette='colorblind')
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.legend(title='Faculty Type', loc='upper left', bbox_to_anchor=(1.05, 1), borderaxespad=0)
+plt.show()
 ```
 
 ## Use direct labeling
 
 -   **Demo:** Remove the legend and add labels for each line at the end of the line (where `x` is the `max(x)` recorded).
 
-```{r}
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-ggplot(
-  staff_long,
-  aes(
-    x = year,
-    y = percentage,
-    color = faculty_type,
-    group = faculty_type
-    )
-  ) +
-  geom_line(linewidth = 1, show.legend = FALSE) +
-  geom_text(
-    data = staff_long |> filter(year == max(year)),
-    aes(x = year + 1, y = percentage, label = faculty_type),
-    hjust = "left", show.legend = FALSE, size = 4
-  ) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    color = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  scale_y_continuous(labels = label_percent(accuracy = 1, scale = 1)) +
-  theme(
-    plot.caption = element_text(size = 8, hjust = 0),
-    plot.margin = margin(0.1, 2.5, 0.1, 0.1, unit = "in")
-  ) +
-  coord_cartesian(clip = "off") +
-  scale_color_colorblind()
+
+palette = sns.color_palette("colorblind", len(faculty_order))
+palette_dict = dict(zip(faculty_order, palette))
+
+plt.figure(figsize=(10, 6))
+sns.lineplot(data=staff_long, x='year', y='percentage', hue='faculty_type', marker='o', palette=palette, legend=False)
+
+for faculty in staff_long['faculty_type'].unique():
+    latest_year = staff_long[staff_long['faculty_type'] == faculty]['year'].max()
+    latest_value = staff_long[(staff_long['faculty_type'] == faculty) & (staff_long['year'] == latest_year)]['percentage'].values[0]
+    plt.text(latest_year + 1, latest_value, faculty, horizontalalignment='left', size='medium', color=palette_dict[faculty], weight='semibold')
+
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.show()
 ```
 
 ## Use color to draw attention
 
 -   **Demo:** Redo the line plot where Part-time Faculty is red and the rest are gray.
 
-```{r}
-staff_long <- staff_long |>
-  mutate(faculty_type_color = if_else(faculty_type == "Part-Time Faculty", "firebrick3", "gray40"))
+```{python}
+staff_long['faculty_type_color'] = staff_long['faculty_type'].apply(lambda x: '#b22222' if x == 'Part-Time Faculty' else '#808080')
+
 ```
 
-```{r}
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-ggplot(
-  staff_long,
-  aes(
-    x = year,
-    y = percentage,
-    color = faculty_type_color, group = faculty_type
-    )
-  ) +
-  geom_line(linewidth = 1, show.legend = FALSE) +
-  geom_text(
-    data = staff_long |> filter(year == max(year)),
-    aes(x = year + 1, y = percentage, label = faculty_type),
-    hjust = "left", show.legend = FALSE, size = 4
-  ) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    color = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  scale_y_continuous(labels = label_percent(accuracy = 1, scale = 1)) +
-  scale_color_identity() +
-  theme(
-    plot.caption = element_text(size = 8, hjust = 0),
-    plot.margin = margin(0.1, 2.5, 0.1, 0.1, unit = "in")
-  ) +
-  coord_cartesian(clip = "off")
+plt.figure(figsize=(10, 6))
+sns.lineplot(data=staff_long, x='year', y='percentage', hue='faculty_type_color', marker='o', ci=False, legend=False, palette=['#808080', '#b22222'])
+for faculty in staff_long['faculty_type'].unique():
+    latest_year = staff_long[staff_long['faculty_type'] == faculty]['year'].max()
+    latest_value = staff_long[(staff_long['faculty_type'] == faculty) & (staff_long['year'] == latest_year)]['percentage'].values[0]
+    plt.text(latest_year + 1, latest_value, faculty, horizontalalignment='left', size='medium', color='black' if faculty != 'Part-Time Faculty' else '#b22222', weight='semibold')
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.show()
 ```
 
-## Pick a purpose
+## Pick a purpose + use labels to communicate the message
 
-```{r}
+
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-p <- ggplot(
-  staff_long,
-  aes(
-    x = year,
-    y = percentage,
-    color = faculty_type_color, group = faculty_type
-    )
-  ) +
-  geom_line(linewidth = 1, show.legend = FALSE) +
-  labs(
-    x = NULL,
-    y = "Percent of Total Instructional Staff",
-    color = NULL,
-    title = "Trends in Instructional Staff Employment Status, 1975-2011",
-    subtitle = "All Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey"
-  ) +
-  scale_y_continuous(labels = label_percent(accuracy = 1, scale = 1)) +
-  scale_color_identity() +
-  theme(
-    plot.caption = element_text(size = 8, hjust = 0),
-    plot.margin = margin(0.1, 0.6, 0.1, 0.1, unit = "in")
-  ) +
-  coord_cartesian(clip = "off") +
-  annotate(
-    geom = "text",
-    x = 2012, y = 41, label = "Part-Time\nFaculty",
-    color = "firebrick3", hjust = "left", size = 5
-  ) +
-  annotate(
-    geom = "text",
-    x = 2012, y = 13.5, label = "Other\nFaculty",
-    color = "gray40", hjust = "left", size = 5
-  ) +
-  annotate(
-    geom = "segment",
-    x = 2011.5, xend = 2011.5,
-    y = 7, yend = 20,
-    color = "gray40", linetype = "dotted"
-  )
-```
-
-## Use labels to communicate the message
-
-```{r}
-#| fig-asp: 0.5
-#| fig-width: 12.0
-p +
-  labs(
-    title = "Instruction by part-time faculty on a steady increase",
-    subtitle = "Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey",
-    y = "Percent of Total Instructional Staff",
-    x = NULL
-  )
+plt.figure(figsize=(10, 6))
+sns.lineplot(data=staff_long, x='year', y='percentage', hue='faculty_type_color', palette=['#808080', '#b22222'], legend=False)
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.annotate('Part-Time\nFaculty', xy=(2011, 41), xytext=(2012, 41), color='#b22222', size=12, ha='left')
+plt.annotate('Other\nFaculty', xy=(2011, 13.5), xytext=(2012, 13.5), color='#808080', size=12, ha='left')
+plt.plot([2011.5, 2011.5], [7, 20], color='#808080', linestyle='dotted')
+plt.ylim(0, 45)
+plt.show()
 ```
 
 ## Simplify
 
-```{r}
+```{python}
 #| fig-asp: 0.5
 #| fig-width: 12.0
-p +
-  labs(
-    title = "Instruction by part-time faculty on a steady increase",
-    subtitle = "Trends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals",
-    caption = "Source: US Department of Education, IPEDS Fall Staff Survey",
-    y = "Percent of Total Instructional Staff",
-    x = NULL
-  ) +
-  theme(panel.grid.minor = element_blank())
+plt.figure(figsize=(10, 6))
+sns.lineplot(data=staff_long, x='year', y='percentage', hue='faculty_type_color', palette=['#808080', '#b22222'], legend=False, ci=False)
+plt.xlabel('')
+plt.ylabel('Percent of Total Instructional Staff')
+plt.title('Instruction by part-time faculty on a steady increase\nTrends in Instructional Staff Employment Status, 1975-2011\nAll Institutions, National Totals')
+plt.annotate('Part-Time\nFaculty', xy=(2011, 41), xytext=(2012, 41), color='#b22222', size=12, ha='left')
+plt.annotate('Other\nFaculty', xy=(2011, 13.5), xytext=(2012, 13.5), color='#808080', size=12, ha='left')
+plt.plot([2011.5, 2011.5], [7, 20], color='#808080', linestyle='dotted')
+plt.ylim(0, 45)
+plt.grid(False)
+plt.show()
 ```
 
 ## Summary
