--- a/slides/18-NEW-communicate.qmd
+++ b/slides/18-NEW-communicate.qmd
@@ -9,39 +9,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-# Warm up
-
-## While you wait for class to begin...
-
-::: task
-Any questions about the project?
-:::
-
-```{=html}
-<iframe allowfullscreen frameborder="0" height="100%" mozallowfullscreen style="min-width: 500px; min-height: 355px" src="https://app.wooclap.com/STA199S24?from=status-bar?" width="100%"></iframe>
-```
-## Announcements {.smaller}
-
--   My office hours this week: Office hours today 1:30 - 2:30 pm today
-
--   Remaining due dates:
-
-    ::: incremental
-    -   Project presentations next Monday in lab -- all team members must be present.
-
-    -   Project write-up and final repo due 8 am Wed, April 24 (you get an extra day!) -- you will lose access to your repo at this time.
-
-    -   Remaining application exercises due on the usual schedule.
-    :::
-
-## "Extra credit"
-
--   Put any additional time into your project, MUCH HIGHER return on investment than any extra credit I can offer
-
--   But...
-    AEs in class on Thursday and next Tuesday will be just you checking in saying you're here.
-    You'll get to practice pull, commit, render, push, but no real content needed.
-    So that's two AEs you can get credit for simply by being here and doing no additional work than pull, commit (a tiny change), render, push during class.
+# Communicating data science results effectively
 
 ## Project {.smaller}
 
@@ -67,12 +35,12 @@ Source: [https://alison.netlify.app/rlm-sad-plot-better](alison.netlify.app/rlm-
 
 # Application exercise
 
-## Application exercise: `ae-17-effective-dataviz` {.smaller}
+## Application exercise: `ae-14-effective-dataviz` {.smaller}
 
 ::: appex
 -   Go to your project called `ae`.
 -   If there are any uncommitted files, commit them, and push. Then pull.
--   Work on `ae-17-effective-dataviz.qmd`.
+-   Work on `ae-14-effective-dataviz.qmd`.
 :::
 
 ## Recap {.smaller}
