Change schedule, fix lecture yamls accordingly

--- a/ae/ae-20-effective-dataviz.qmd
+++ b/ae/ae-20-effective-dataviz.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Trends instructional staff employees in universities"
+title: "AE 20: Trends instructional staff employees in universities"
 categories: 
   - Application exercise
 ---
